@@ -1491,11 +1491,10 @@ bool HTMLInputElementImpl::encoding(const QTextCodec* codec, khtml::encodingList
 
             if (m_activeSubmit)
             {
-                QString enc_str = m_value.isNull() ?
-                    static_cast<RenderSubmitButton*>(m_render)->defaultLabel() : value().string();
-
-                if(!enc_str.isEmpty())
-                {
+                QString enc_str = value().string();
+                if (enc_str.isEmpty())
+                    enc_str = static_cast<RenderSubmitButton*>(m_render)->defaultLabel();
+                if (!enc_str.isEmpty()) {
                     encoding += fixUpfromUnicode(codec, enc_str);
                     return true;
                 }
@@ -1567,7 +1566,7 @@ bool HTMLInputElementImpl::encoding(const QTextCodec* codec, khtml::encodingList
             break;
         }
         case ISINDEX:
-            encoding += fixUpfromUnicode(codec, m_value.string());
+            encoding += fixUpfromUnicode(codec, value().string());
             return true;
     }
     return false;
